# quatExtras

./: .gitignore  CMakeLists.txt  README.md
plug-ins/windows-maya2014/: quatExtras.mll
plug-ins/windows-maya2015/: quatExtras.mll
plug-ins/windows-maya2016/: quatExtras.mll
src/: axisAngleToQuat.cpp  axisAngleToQuat.h  nodeUtils.cpp  nodeUtils.h  pluginMain.cpp  quatSlerp.cpp  quatSlerp.h  quatToAxisAngle.cpp  quatToAxisAngle.h
